DEVEX-504 fixed compatibility for JDK16 ; fixed whitespaces ; updated README.md
* added 'add-opens' for java >= 8
* windows only: fixed whitespaces in path not working
* added link to ExternalSync documentation in README.md