@@ -7,6 +7,12 @@ my_realpath() {
 }
 
 FS_CLI_DIR="$( cd "$(dirname "$(my_realpath "$0")")/../" ; pwd -P )/"
-$JAVACMD -Xmx512m -Dlog4j.configuration=file:"${FS_CLI_DIR}conf/log4j.properties" -cp "${FS_CLI_DIR}/lib/*" com.espirit.moddev.cli.Main "$@";
+
+BYTECODE_VERSION=$("${JAVA_HOME}"/bin/javap -verbose java.lang.Object | grep major | cut -d " " -f5)
+if [ "${BYTECODE_VERSION}" -gt 52 ]; then
+  VM_ARGS="--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED"
+fi
+
+$JAVACMD $VM_ARGS -Xmx512m -Dlog4j.configuration=file:"${FS_CLI_DIR}conf/log4j.properties" -cp "${FS_CLI_DIR}/lib/*" com.espirit.moddev.cli.Main "$@";
 RETVAL=$?;
 exit ${RETVAL};
